--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,10 @@
     "types": [
       "webpack-env",
       "jest",
-      "src/typings"
+    ],
+    "typeRoots": [
+      "node_modules/@types",
+      "typings"
     ],
     "paths": {
       "@/*": [
@@ -32,8 +35,9 @@
     "src/**/*.ts",
     "src/**/*.tsx",
     "src/**/*.vue",
+    "typings/**/*.ts",
     "tests/**/*.ts",
-    "tests/**/*.tsx"
+    "tests/**/*.tsx",
   ],
   "exclude": [
     "node_modules"
