--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "normalize.css": "^8.0.1",
     "qs": "^6.6.0",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.6",
